fix: remove expand collapse trigger icon styles (#2306)
These were added from extension overrides but not needed.

--- a/packages/react/src/components/ExpandCollapsePanel/index.css
+++ b/packages/react/src/components/ExpandCollapsePanel/index.css
@@ -3,7 +3,6 @@
   --expandcollapse-trigger-color: var(--gray-90);
   --expandcollapse-panel-background-color: transparent;
   --expandcollapse-panel-color: var(--gray-90);
-  --expandcollapse-trigger-icon-offset: 0;
 }
 
 .ExpandCollapse__trigger {
@@ -21,11 +20,6 @@
 .ExpandCollapse__trigger-title {
   flex-grow: 1;
   text-align: left;
-}
-
-.ExpandCollapse__trigger > .Icon:last-child {
-  position: relative;
-  right: var(--expandcollapse-trigger-icon-offset);
 }
 
 .ExpandCollapse__panel {
